--- a/package.json
+++ b/package.json
@@ -8,8 +8,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.26.1",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "echarts": "^5.3.2",
+    "element-plus": "^2.1.8",
+    "neovis.js": "^1.6.0",
+    "qs": "^6.10.3",
+    "vue": "^3.2.13",
+    "vue-axios": "^3.4.1",
+    "vue-echarts": "^6.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
